[package]
name = "pubky"
description = "Pubky SDK"
version.workspace = true
edition = "2024"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

keywords = ["web", "dht", "dns", "decentralized", "identity"]
categories = [
    "network-programming",
    "cryptography",
    "web-programming",
    "authentication",
]

[lib]
crate-type = ["rlib"]

[features]
default = []
json = ["dep:serde", "reqwest/json"]

[dependencies]
pubky-common.workspace = true
thiserror.workspace = true
async-trait.workspace = true
eventsource-stream.workspace = true
url.workspace = true
base64.workspace = true
pkarr = { workspace = true, features = ["full"] }
cookie = "0.18"
flume = { version = "0.11", default-features = false, features = ["async"] }
futures-util.workspace = true
serde = { workspace = true, optional = true }
serde_json.workspace = true
httpdate.workspace = true
web-time = "1"
# Cross-target async sync primitives. The `sync` feature is portable to
# `wasm32-unknown-unknown` (see tokio's platform support docs); the native
# target adds the full feature set in its own section below.
tokio = { workspace = true, features = ["sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = [
    "cookies",
    "rustls",
    "json",
    "stream",
] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { workspace = true, features = ["json", "stream"] }
log.workspace = true
wasm-bindgen-futures.workspace = true
futures-lite = { version = "2", default-features = false }

[dev-dependencies]
pubky-testnet.workspace = true # used in docstring tests
httpmock = "0.7"
http-relay = { workspace = true, features = ["server", "link-compat"] }

[package.metadata.docs.rs]
all-features = true


# We are aiming to stick with microsoft/rust-guidelines
# https://github.com/microsoft/rust-guidelines
# currently dissabled.

[lints.rust]
# Baseline compiler lints
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
# Enable all major clippy categories at warn
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }

# Select restriction-group lints for consistency and safety
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
implicit_clone = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
