[package]
name = "pubky-testnet"
description = "A local test network for Pubky Core development."
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


keywords = ["pkarr", "pubky", "testnet", "testing"]
categories = ["web-programming", "authentication", "cryptography"]

[dependencies]
anyhow.workspace = true
pkarr-relay = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
url.workspace = true

pubky = { path = "../pubky-sdk", features = ["json"] , version = "0.7.0" }
pubky-common = { path = "../pubky-common" , version = "0.7.0" }
pubky-homeserver = { path = "../pubky-homeserver", default-features = false, features = [
    "testing",
] , version = "0.7.0" }
pubky_test_utils = { path = "../test_utils/pubky_test", version = "0.7.0" }
# External http-relay: server + link-compat, no persist/cli (in-memory storage for tests)
http-relay = { workspace = true, features = ["server", "link-compat"] }
tempfile = "3.19.1"
tracing.workspace = true
pkarr = { workspace = true }
mainline = { workspace = true }
clap.workspace = true
dirs = "6.0.0"
once_cell = "1.21.3"
# Pinned to 0.20.0 to maintain compatibility with Rust 1.89.0 (0.20.2+ requires Rust 1.92.0)
postgresql_embedded = { version = "=0.20.0", optional = true }
postgresql_commands = { version = "=0.20.0", optional = true }
postgresql_archive = { version = "=0.20.0", optional = true }
rand = { version = "0.9", optional = true }

[features]
default = []
embedded-postgres = ["postgresql_embedded", "postgresql_commands", "postgresql_archive", "rand"]
