[package]
name = "pubky-testnet"
description = "A local test network for Pubky Core development."
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


keywords = ["pkarr", "pubky", "testnet", "testing"]
categories = ["web-programming", "authentication", "cryptography"]

[dependencies]
anyhow.workspace = true
pkarr-relay = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
url.workspace = true

pubky = { path = "../pubky-sdk", features = ["json"] , version = "0.8.0" }
pubky-common = { path = "../pubky-common" , version = "0.8.0" }
pubky-homeserver = { path = "../pubky-homeserver", default-features = false, features = [
    "testing",
] , version = "0.8.0" }
pubky_test_utils = { path = "../test_utils/pubky_test", version = "0.1.0" }
# External http-relay: server + link-compat, no persist/cli (in-memory storage for tests)
http-relay = { workspace = true, features = ["server", "link-compat"] }
tempfile = "3.19.1"
tracing.workspace = true
pkarr = { workspace = true }
mainline = { workspace = true }
clap.workspace = true
dirs = "6.0.0"
once_cell = "1.21.3"
testcontainers = { version = "0.27", optional = true }
testcontainers-modules = { version = "0.15", features = ["postgres"], optional = true }
rand = { version = "0.9", optional = true }

[dev-dependencies]

[features]
default = []
embedded-postgres = ["testcontainers", "testcontainers-modules", "rand"]
