[package]
name = "pubky-testnet"
description = "A local test network for Pubky Core development."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


keywords = ["pkarr", "pubky", "testnet", "testing"]
categories = ["web-programming", "authentication", "cryptography"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
# External http-relay: server + link-compat, no persist/cli (in-memory storage for tests)
http-relay = { workspace = true, features = ["server", "link-compat"] }
libc = { version = "0.2", optional = true }
mainline = { workspace = true }
once_cell.workspace = true
pkarr = { workspace = true }
pkarr-relay = { workspace = true }
pubky = { workspace = true, features = ["json"] }
pubky-common.workspace = true
pubky-homeserver = { workspace = true, features = [ "testing" ] }
pubky_test_utils.workspace = true
tempfile.workspace = true
testcontainers = { version = "0.27", features = ["watchdog"], optional = true }
testcontainers-modules = { version = "0.15", features = ["postgres"], optional = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

[features]
default = []
docker-postgres = ["testcontainers", "testcontainers-modules", "libc"]
# Deprecated alias — use `docker-postgres` instead.
embedded-postgres = ["docker-postgres"]
