[package]
name = "pubky"
version = "0.3.0"
edition = "2021"
description = "Pubky core client"
license = "MIT"
repository = "https://github.com/pubky/pubky"
keywords = ["web", "dht", "dns", "decentralized", "identity"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "2.0.6"
wasm-bindgen = "0.2.99"
url = "2.5.4"
bytes = "^1.9.0"
base64 = "0.22.1"

pkarr = { git = "https://github.com/Pubky/pkarr", package = "pkarr", features = ["full"] }
mainline = "5.0.0-rc.1"
pubky-common = { version = "0.1.0", path = "../pubky-common" }
cookie = "0.18.1"
tracing = "0.1.41"
cookie_store = { version = "0.21.1", default-features = false }
anyhow = "1.0.94"

# Native dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.9", features = ["cookies", "rustls-tls"], default-features = false }
tokio = { version = "1.42.0", features = ["full"] }

# Wasm dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12.9", default-features = false }
futures-lite = { version = "2.5.0", default-features = false }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.22"

js-sys = "0.3.76"
web-sys = "0.3.76"

[dev-dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
axum-server = "0.7.1"
futures-util = "0.3.31"
http-relay = { path = "../http-relay" }
pubky-homeserver = { path = "../pubky-homeserver" }
tokio = "1.42.0"

[package.metadata.docs.rs]
all-features = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-g', '-O']

# [lints.clippy]
unwrap_used = "deny"
