[package]
name = "pubky-core-examples"
version = "0.6.0"
edition.workspace = true
publish = false

[[bin]]
name = "testnet"
path = "./1-testnet/main.rs"

[[bin]]
name = "logging"
path = "./0-logging/main.rs"

[[bin]]
name = "signup"
path = "./2-signup/signup.rs"

[[bin]]
name = "authenticator"
path = "./3-auth_flow/authenticator.rs"

[[bin]]
name = "storage"
path = "./4-storage/main.rs"

[[bin]]
name = "request"
path = "./5-request/main.rs"

[[bin]]
name = "authenticator_signup"
path = "./6-auth_flow_signup/authenticator.rs"

[[bin]]
name = "events_stream"
path = "./7-events_stream/main.rs"

[dependencies]
futures-util = "0.3.31"
anyhow = "1.0.101"
base64 = "0.22.1"
clap = { version = "4.5.57", features = ["derive"] }
pubky = { path = "../../pubky-sdk", version = "0.6.0" }
pubky-testnet = { path = "../../pubky-testnet", version = "0.6.0" }
pubky-common = { path = "../../pubky-common", version = "0.6.0" }
reqwest = "0.12.23"
rpassword = "7.4.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
url = "2.5.8"
