[package]
name = "pubky-core-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "testnet"
path = "./9-testnet/main.rs"

[[bin]]
name = "logging"
path = "./8-logging/main.rs"

[[bin]]
name = "signup"
path = "./1-signup/signup.rs"

[[bin]]
name = "authenticator"
path = "./2-auth_flow/authenticator.rs"

[[bin]]
name = "storage"
path = "./3-storage/main.rs"

[[bin]]
name = "request"
path = "./4-request/main.rs"

[[bin]]
name = "authenticator_signup"
path = "./5-auth_flow_signup/authenticator.rs"

[[bin]]
name = "events_stream"
path = "./6-events_stream/main.rs"

[[bin]]
name = "sessions"
path = "./7-session_management/main.rs"

[[bin]]
name = "keygen"
path = "./keygen.rs"

[features]
default = ["docker-postgres"]
docker-postgres = ["pubky-testnet/docker-postgres"]
# Deprecated alias — use `docker-postgres` instead.
embedded-postgres = ["docker-postgres"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap = { workspace = true, features = ["derive"] }
futures-util.workspace = true
pubky-common.workspace = true
pubky-testnet.workspace = true
pubky.workspace = true
reqwest.workspace = true
rpassword = "7"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
url.workspace = true
