[package]
name = "pubky_test_utils_drop_db_helper"
version = "0.1.0"
description = "Do not use on its own. Use pubky_test_utils instead."
keywords = ["pubky", "test", "utilities", "drop", "database"]
categories = ["testing"]
edition = "2021"
rust-version = "1.89"
authors = []
license = "MIT"
homepage = "https://github.com/pubky/pubky-core"
repository = "https://github.com/pubky/pubky-core"
publish = false

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
