[package]
name = "pubky_test_utils"
version = "0.1.0"
description = "Test utilities for Pubky Core testing"
keywords = ["pubky", "test", "utilities"]
categories = ["testing"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
pubky_test_utils_macro = { path = "../test_macro", version = "0.1.0" }
pubky_test_utils_drop_db_helper = { path = "../drop_db_helper", version = "0.1.0" }
