[package]
name = "pubky_test_utils"
version = "0.1.0"
description = "Test utilities for Pubky Core testing"
keywords = ["pubky", "test", "utilities"]
categories = ["testing"]
edition = "2021"
rust-version = "1.89"
authors = []
license = "MIT"
homepage = "https://github.com/pubky/pubky-core"
repository = "https://github.com/pubky/pubky-core"
publish = false

[dependencies]
pubky_test_utils_macro = { path = "../test_macro", version = "0.1.0" }
pubky_test_utils_drop_db_helper = { path = "../drop_db_helper", version = "0.1.0" }
