[package]
name = "pubky_test_utils_macro"
version = "0.1.0"
description = "Do not use on its own. Use pubky_test_utils instead."
keywords = ["pubky", "test", "utilities", "macro"]
categories = ["testing"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
pubky_test_utils_drop_db_helper = { path = "../drop_db_helper", version = "0.1.0" }
proc-macro-crate = "3.3.0"


[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
