[package]
name = "pubky-wasm"
version = "0.5.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.25"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
tsify = "0.5.5"
pubky = { path = "../../../pubky-client", default-features = false }
pkarr = { version = "3.7.1", default-features = false, features = ["relays"] }
pubky-common = { path = "../../../pubky-common" }
url = "2.5.4"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
getrandom2 = { version = "0.2.15", package = "getrandom", features = ["js"] }
reqwest = { version = "0.12.12", default-features = false }
futures-lite = { version = "2.6.0", default-features = false }
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3.77", features = [
    "Request",
    "RequestInit",
    "Headers",
    "ServiceWorkerGlobalScope",
] }
