[package]
name = "pubky-wasm"
version = "0.5.4"
edition = "2024"
description = "Pubky-Core Client WASM bindings"
authors = [
    "SeverinAlexB <severin@synonym.to>",
    "SHAcollision <shacollision@synonym.to>",
    "Nuh <nuh@nuh.dev>",
]
license = "MIT"
homepage = "https://github.com/pubky/pubky-core"
repository = "https://github.com/pubky/pubky-core"
keywords = ["web", "dht", "dns", "decentralized", "identity"]
categories = [
    "network-programming",
    "cryptography",
    "web-programming",
    "authentication",
]
publish = false # Do not publish to crates.io, only publish to npmjs.com

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.25"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
tsify = "0.5.5"
pubky = { path = "../../../pubky-client", default-features = false }
pkarr = { workspace = true, features = ["relays"] }
pubky-common = { path = "../../../pubky-common" }
web-sys = { version = "0.3.77", default-features = false, features = [
    "Request",
    "RequestInit",
    "Headers",
    "ServiceWorkerGlobalScope",
] }
url = "2.5.4"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
