[package]
name = "pubky-wasm"
version = "0.9.0"
edition = "2024"
rust-version.workspace = true
description = "Pubky-Core Client WASM bindings"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["web", "dht", "dns", "decentralized", "identity"]
categories = [
    "network-programming",
    "cryptography",
    "web-programming",
    "authentication",
]
publish = false # Do not publish to crates.io, only publish to npmjs.com

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "bundle_npm"
path = "scripts/bundle_npm.rs"

[dependencies]
wasm-bindgen = "0.2"
console_log = { version = "1", features = ["color"] }
log.workspace = true
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
tsify = "0.5"
pubky = { path = "../../../pubky-sdk", default-features = false, features = [
    "json",
] , version = "0.9" }
pubky-common = { path = "../../../pubky-common", version = "0.9" }
pkarr = { workspace = true, default-features = false }
# ReadableStream is not available in early 0.3.x web-sys releases.
web-sys = { version = "0.3.77", default-features = false, features = [
    "Request",
    "RequestInit",
    "RequestCredentials",
    "Response",
    "ReadableStream",
    "ResponseInit",
    "Headers",
    "ServiceWorkerGlobalScope",
] }
url.workspace = true
reqwest = { workspace = true, features = [
    "stream",
] }
wasm-streams.workspace = true
base64 = "0.22"

[dev-dependencies]
wasm-bindgen-test = "0.3"
