[package]
name = "pubky-wasm"
version.workspace = true
edition = "2024"
rust-version.workspace = true
description = "Pubky-Core Client WASM bindings"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["web", "dht", "dns", "decentralized", "identity"]
categories = [
    "network-programming",
    "cryptography",
    "web-programming",
    "authentication",
]
publish = false # Do not publish to crates.io, only publish to npmjs.com

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "bundle_npm"
path = "scripts/bundle_npm.rs"

[dependencies]
base64.workspace = true
console_log = { version = "1", features = ["color"] }
futures-util.workspace = true
js-sys.workspace = true
log.workspace = true
pkarr = { workspace = true, default-features = false }
pubky = { workspace = true, features = [ "json" ] }
pubky-common.workspace = true
reqwest = { workspace = true, features = [ "stream" ] }
serde.workspace = true
serde-wasm-bindgen = "0.6"
serde_json.workspace = true
tsify = "0.5"
url.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures.workspace = true
wasm-streams.workspace = true
# ReadableStream is not available in early 0.3.x web-sys releases.
web-sys = { version = "0.3.77", default-features = false, features = [
    "Request",
    "RequestInit",
    "RequestCredentials",
    "Response",
    "ReadableStream",
    "ResponseInit",
    "Headers",
    "ServiceWorkerGlobalScope",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
